--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-toastify": "^9.1.3",
     "styled-components": "^6.0.8",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "prisma": "^5.3.1"
