--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.3.1",
     "@tanstack/react-query": "^4.35.3",
